--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
 - '3.6'
 install:
 - pip install .
-script: pytest
+script:
+  - pip install tox
+  - tox
 deploy:
   provider: pypi
   username: dexter2206
